2009-05-08  Thomas Thurman  <thomas.thurman@collabora.co.uk>
	
	NB#106650: ROTATION: HildonAppMenu is too narrow in portrait

	* matchbox/client-types/mb-wm-client-menu.c: in portrait mode,
	menus take up the whole width of the screen.  Fixes NB#106650.

2009-05-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Regression fix.  We died when the transient-for was unmapped then
	remapped again.  It's still garbage (the application becomes
	unresponsive and uncloseable) but at least we surive.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_destroy):
	  Reinstantiated the code which detransitived the destroyed
	  client's transients.  I don't know what does it take for
	  people to read the **** comments around code?
	* matchbox/core/mb-window-manager.c (mb_wm_focus_client):
	  Removing some nonsense code.

2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/mb-wm-config.h.in:
	  Introducing MBWM_DEB_VERSION to tell you the users of the library
	  the Debian source package version which it was built from.
	* debian/rules
	* configure.ac

2009-05-07  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere:
	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): Remove
	unmapping of transients. Fixes: NB#109299

	* matchbox/client-types/mb-wm-client-menu.c: Remove the negative
	coordinates code, it's not going to happen. Some fixes to Thomas'
	legacy menu layouting.

2009-05-06  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#111652 legacy widget : application menu is not horizontally
	aligned application title text
	
	* matchbox/client-types/mb-wm-client-menu.c:
	Legacy app menus are positioned according to the
	position of the window title.
	* matchbox/theme-engines/mb-wm-theme.c:
	* matchbox/theme-engines/mb-wm-theme.h:
	Add accessor to retrieve the position of the window title.

2009-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Now, try to deal with preexisting fullscreen clients correctly,
	for real.
