@@ -1,3 +1,9 @@
+2009-05-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
+	(mb_wm_comp_mgr_clutter_turn_on_real): Trap X errors and check that
+	clutter_x11_get_stage_window succeeds. Fixes: NB#115724
+
 2009-05-08  Thomas Thurman  <thomas.thurman@collabora.co.uk>
 	
 	NB#106650: ROTATION: HildonAppMenu is too narrow in portrait
